<resources>

    <string name="app_name">Github User</string>

    <!--Option_Menu-->
    <string name="title_menu_theme">Theme</string>
    <string name="title_menu_favorite">Favorite</string>
    <string name="menu_search">Search</string>
    <string name="title_menu_notif">Notification</string>
    <string name="title_menu_about">About</string>
    <string name="menu_search_hint">Masukkan nama User</string>

    <!--TabLayout-->
    <string name="tab_1">Followers</string>
    <string name="tab_2">Following</string>

    <!--Item_User-->
    <string name="text_profile_name">Audi Hagi</string>
    <string name="text_profile_type">user</string>

    <!--Action_Bar-->
    <string name="user_favorite">User Favorite</string>

    <!--Alarm-->
    <string name="alarm_message">There is an update on the github user. Check it out now!</string>

    <string name="barrier">:</string>
    <string name="hobi_label">Hobi</string>
    <string name="birth_label">Tanggal Lahir</string>
    <string name="bio_label">Biodata</string>
    <string name="profile_email">audi.hagi2002@gmail.com</string>
    <string name="profile_birth">1 September 2002</string>
    <string name="profile_hobby">Futsal, Sepakbola &amp; Badminton</string>
    <string name="text_on_notification">Turn On Notifications</string>
    <string name="text_off_notification">Turn Off Notifications</string>
    <string name="text_set_theme">Set your theme here</string>
    <string name="set_favorite">You Have Not Added Your Favorite User</string>
    <string name="text_not_follower">This User Has No Followers</string>
    <string name="text_not_following">This User Has No Following</string>
    <string name="text_dark_mode">Dark Mode</string>
    <string name="text_repository_title">Repository</string>
    <string name="text_github_username_not_found">Github Username Not Found</string>
    <string name="cd_favorite_button">Favorite Floating Button</string>
    <string name="cd_image_splash">Image Splash</string>

</resources>