<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="4dp">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/profile"
            app:civ_border_color="#FFFF"
            app:civ_border_width="2dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_profile_name"
        style="@style/TVProfile"
        android:text="@string/profile_name"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/tv_profile_email"
        style="@style/TVProfile"
        android:text="@string/profile_email"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_profile_name" />

    <TextView
        android:id="@+id/bio_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/bio_label"
        app:layout_constraintTop_toBottomOf="@+id/tv_profile_email"
        tools:ignore="MissingConstraints" />

    <TableLayout
        android:id="@+id/bio_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="16dp"
        app:layout_constraintTop_toBottomOf="@+id/bio_title">

        <TableRow style="@style/BarisTable">

            <TextView
                style="@style/TextContent"
                android:text="@string/birth_label" />

            <TextView
                style="@style/Barier"
                android:text="@string/barrier" />

            <TextView
                android:id="@+id/tv_athlete_birth"
                style="@style/TextContent"
                android:text="@string/profile_birth" />
        </TableRow>

        <TableRow style="@style/BarisTable">

            <TextView
                style="@style/TextContent"
                android:text="@string/hobi_label" />

            <TextView
                style="@style/Barier"
                android:text="@string/barrier" />

            <TextView
                android:id="@+id/tv_athlete_sport"
                style="@style/TextContent"
                android:text="@string/profile_hobby" />
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>